--- a/project/package.json
+++ b/project/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "history": "^5.3.0",
