--- a/project/package.json
+++ b/project/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@trendyol-js/react-carousel": "^3.0.2",
+    "@types/react-jss": "^10.0.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.8",
@@ -14,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.0",
+    "react-jss": "^10.10.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
